# uefi-rs

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config
.github/: dependabot.yml
.github/workflows/: book.yml  release.yml  rust.yml
book/: redirect.html
book/src/how_to/: protocols.md
book/src/tutorial/: app.md  building.md
src/: lib.rs
src/buffer/: mod.rs  vec_buffer.rs
src/data_types/: buffer.rs  guid.rs  mod.rs
src/proto/: loaded_image.rs  rng.rs
src/proto/media/: fs.rs
src/proto/shim/: mod.rs
src/result/: mod.rs
src/table/: boot.rs  header.rs  runtime.rs  system.rs
template/: Cargo.toml
uefi/: CHANGELOG.md  Cargo.toml
uefi-macros/: CHANGELOG.md  Cargo.toml
uefi-macros/src/: lib.rs
uefi-macros/tests/: compilation.rs
uefi-macros/tests/ui/: entry.rs  entry.stderr
uefi-raw/: CHANGELOG.md  Cargo.toml
uefi-raw/src/: guid.rs  lib.rs  opaque.rs  status.rs
uefi-raw/src/data_types/: chars.rs  guid.rs  mod.rs  owned_strs.rs
uefi-raw/src/proto/: loaded_image.rs  mod.rs  rng.rs
uefi-raw/src/proto/console/: gop.rs  serial.rs
uefi-raw/src/proto/console/pointer/: mod.rs
uefi-raw/src/proto/console/text/: input.rs  output.rs
uefi-raw/src/proto/debug/: context.rs  exception.rs  mod.rs
uefi-raw/src/proto/device_path/: device_path_gen.rs  mod.rs  text.rs
uefi-raw/src/proto/driver/: component_name.rs
uefi-raw/src/proto/media/: block.rs  disk.rs  fs.rs  partition.rs
uefi-raw/src/proto/media/file/: dir.rs  info.rs  mod.rs  regular.rs
uefi-raw/src/proto/network/: pxe.rs  snp.rs
uefi-raw/src/proto/pi/: mp.rs
uefi-raw/src/proto/security/: memory_protection.rs
uefi-raw/src/proto/shim/: mod.rs
uefi-raw/src/proto/string/: unicode_collation.rs
uefi-raw/src/proto/tcg/: v1.rs  v2.rs
uefi-raw/src/protocol/: device_path.rs  hii.rs  loaded_image.rs  media.rs  mod.rs  rng.rs
uefi-raw/src/protocol/console/: gop.rs  serial.rs
uefi-raw/src/protocol/console/pointer/: mod.rs
uefi-raw/src/protocol/console/text/: input.rs  output.rs
uefi-raw/src/protocol/debug/: mod.rs
uefi-raw/src/protocol/device_path/: mod.rs  text.rs
uefi-raw/src/protocol/driver/: component_name.rs
uefi-raw/src/protocol/media/: block.rs  disk.rs  fs.rs  partition.rs
uefi-raw/src/protocol/media/file/: info.rs  mod.rs
uefi-raw/src/protocol/network/: http.rs  pxe.rs  snp.rs
uefi-raw/src/protocol/pi/: mp.rs
uefi-raw/src/protocol/security/: memory_protection.rs
uefi-raw/src/protocol/shim/: mod.rs
uefi-raw/src/protocol/string/: unicode_collation.rs
uefi-raw/src/protocol/tcg/: v1.rs  v2.rs
uefi-raw/src/result/: error.rs  mod.rs  status.rs
uefi-raw/src/table/: boot.rs  header.rs  mod.rs  runtime.rs  system.rs
uefi-services/src/: lib.rs
uefi-test-runner/: Cargo.toml  build.py
uefi-test-runner/examples/: hello_world.rs  loaded_image.rs  system_info.rs
uefi-test-runner/src/: main.rs
uefi-test-runner/src/boot/: memory.rs  mod.rs
uefi-test-runner/src/fs/: mod.rs
uefi-test-runner/src/proto/: debug.rs  device_path.rs  media.rs  mod.rs  rng.rs  shell_params.rs  tcg.rs  usb.rs
uefi-test-runner/src/proto/console/: gop.rs  serial.rs
uefi-test-runner/src/proto/media/: mod.rs
uefi-test-runner/src/proto/network/: http.rs  mod.rs  pxe.rs
uefi-test-runner/src/proto/pi/: mp.rs
uefi-test-runner/src/runtime/: vars.rs
uefi-test-runner/src/uefi_stub/: boot.rs  console.rs  fs.rs  gop.rs  logger.rs  mod.rs  runtime.rs  shared_box.rs  text.rs  uefi_services.rs
uefi-test-runner/src/uefi_stub/proto/: console.rs  device_path_text.rs  fs.rs  gop.rs  loaded_image.rs  mod.rs  pointer.rs  rng.rs  text.rs
uefi/src/: allocator.rs  allocator_impl.rs  boot.rs  global_allocator.rs  lib.rs  logger.rs  mem.rs  result.rs  runtime.rs
xtask/: Cargo.toml
xtask/src/: arch.rs  cargo.rs  check_raw.rs  disk.rs  main.rs  opt.rs  qemu.rs  release.rs  target.rs  util.rs
(+45 files in other folders)
