[package]
name = "uefi-raw"
version = "0.1.0"
authors = ["The Rust OSDev team"]
edition = "2021"
repository = "https://github.com/rust-osdev/uefi-rs"
keywords = ["uefi", "efi"]
categories = ["embedded", "no-std", "api-bindings"]
license = "MPL-2.0"
rust-version = "1.68"

[dependencies]
bitflags = "1.3.1"
log = { version = "0.4.5", default-features = false }
ptr_meta = { version = "0.2.0", default-features = false }
ucs2 = "0.3.2"
uefi-macros = "0.11.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
