[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.51"
clap = { version = "4.0.4", default-features = false, features = ["derive", "help", "usage", "std"] }
fatfs = { version = "0.3.6", default-features = false, features = ["alloc", "std"] }
fs-err = "2.6.0"
heck = "0.4.0"
itertools = "0.10.5"
mbrman = "0.5.1"
nix = { version = "0.26.1", default-features = false, features = ["fs"] }
os_info = { version = "3.6.0", default-features = false }
proc-macro2 = { version = "1.0.53", features = ["span-locations"] }
quote = "1.0.21"
regex = "1.5.4"
serde_json = "1.0.73"
# TODO
syn = { version = "2.0.0", features = ["full", "extra-traits"] }
tempfile = "3.2.0"
walkdir = "2.3.3"
